welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
			setCouleurBrosse()==Color.Yellow;
                                        ^MethodsPicture:13: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
			setCouleurBrosse()==Color.Red;
                                        ^MethodsPicture:21: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
			setCouleurBrosse()==Color.Blue;
                                        ^MethodsPicture:29: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
			setCouleurBrosse()==Color.Green;
                                        ^