welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	for (i<-1 to 16) {
		if (i>=1 && i<=4) {
			setCouleurBrosse()==Color.Yellow;
			avance();
			baisseBrosse;
			leveBrosse;
			avance();
			gauche()
		}
		if (i>4 && i<=8) {
			setCouleurBrosse()==Color.Red;
			avance();
			baisseBrosse;
			leveBrosse;
			avance();
			gauche()
		}
		if (i>8 && i<=12) {
			setCouleurBrosse()==Color.Blue;
			avance();
			baisseBrosse;
			leveBrosse;
			avance();
			gauche()
		}
		if (i>12 && i<=16) {
			setCouleurBrosse()==Color.Green;
			avance();
			baisseBrosse;
			leveBrosse;
			avance();
			gauche()
		}
		
	}	
}
